-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.2, 5.0.0 Beta 1, 5.0.0 RC 1, 5.0.0
-
None
-
OS X 10.7.4, Qt 5/4.8.2
-
-
5b70efb1258fd7435e8cfbed1a54abb46db0adcc
The default background QPixmap is missing in Qt 5. The function to get the image file (QWizardPrivate::findDefaultBackgroundPixmap()) is compiled out with Q_WS_MAC macro which is not defined in Qt 5.
Also, Qt 4.8.2 is also missing the same image when running in OS X 10.7. The system file used for the image changed filename extension from .tif to .png in this OS version.
- replaces
-
QTBUG-23701 tst_QWizard::setPixmap() fails on Mac OS X
-
- Closed
-
| For Gerrit Dashboard: QTBUG-26722 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 66614,2 | Mac: QWizard default background pixmap works again | stable | qt/qtbase | Status: MERGED | +2 | 0 |