tests/auto/widgets/dialogs/qwizard/tst_qwizard.cpp
@@ -439,14 +439,8 @@ void tst_QWizard::setPixmap()
     QVERIFY(wizard.pixmap(QWizard::BannerPixmap).isNull());
     QVERIFY(wizard.pixmap(QWizard::LogoPixmap).isNull());
     QVERIFY(wizard.pixmap(QWizard::WatermarkPixmap).isNull());
-#ifdef Q_OS_MAC
-    if (QSysInfo::MacintoshVersion > QSysInfo::MV_10_3) {
-        QEXPECT_FAIL("", "QTBUG-23701", Continue);
-        QVERIFY(wizard.pixmap(QWizard::BackgroundPixmap).isNull() == false);
-    } else {
-        // fall through since the image doesn't exist on a 10.3 system.
-        QVERIFY(page->pixmap(QWizard::BackgroundPixmap).isNull());
-    }
+#ifdef Q_OS_MACX
+    QVERIFY(wizard.pixmap(QWizard::BackgroundPixmap).isNull() == false);
 #else
     QVERIFY(wizard.pixmap(QWizard::BackgroundPixmap).isNull());
 #endif
@@ -454,14 +448,8 @@ void tst_QWizard::setPixmap()
     QVERIFY(page->pixmap(QWizard::BannerPixmap).isNull());
     QVERIFY(page->pixmap(QWizard::LogoPixmap).isNull());
     QVERIFY(page->pixmap(QWizard::WatermarkPixmap).isNull());
-#ifdef Q_OS_MAC
-    if (QSysInfo::MacintoshVersion > QSysInfo::MV_10_3) {
-        QEXPECT_FAIL("", "QTBUG-23701", Continue);
-        QVERIFY(wizard.pixmap(QWizard::BackgroundPixmap).isNull() == false);
-    } else {
-        // fall through since the image doesn't exist on a 10.3 system.
-        QVERIFY(page->pixmap(QWizard::BackgroundPixmap).isNull());
-    }
+#ifdef Q_OS_MACX
+    QVERIFY(wizard.pixmap(QWizard::BackgroundPixmap).isNull() == false);
 #else
     QVERIFY(page->pixmap(QWizard::BackgroundPixmap).isNull());
 #endif
